--- a/.github/workflows/deploy-on-github-pages.yml
+++ b/.github/workflows/deploy-on-github-pages.yml
@@ -27,14 +27,7 @@ jobs:
                   key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
             - name: Build
-              run: |
-                  cargo build --release --target wasm32-unknown-unknown
-                  mkdir -p ./dist
-                  cp -r \
-                    ./src/index.html \
-                    ./assets \
-                    ./target/wasm32-unknown-unknown/release/deathball.wasm \
-                    ./dist
+              run: ./build-wasm
 
             - name: Deploy
               uses: JamesIves/github-pages-deploy-action@4.1.7
