--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 egui = "0.15.0"
-egui-macroquad = "0.7.0"
+egui-macroquad = { git = "https://github.com/noc7c9/egui-macroquad" }
 futures = "0.3.18"
-macroquad = "0.3.10"
+kira = { version = "0.5.3", default-features = false, features = ["ogg"] }
+macroquad = { version = "0.3.10", default-features = false }
 nalgebra = { version = "0.29.0", features = ["convert-glam014"] }
 rapier2d = "0.11.1"
 
