--- a/.github/workflows/deploy-on-github-pages.yml
+++ b/.github/workflows/deploy-on-github-pages.yml
@@ -26,6 +26,8 @@ jobs:
                       target
                   key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+            - run: cargo install wasm-bindgen-cli --version 0.2.78
+
             - name: Build
               run: ./build-wasm
 
