--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ kira = { version = "0.5.3", default-features = false, features = ["ogg"] }
 macroquad = { version = "0.3.10", default-features = false }
 nalgebra = { version = "0.29.0", features = ["convert-glam014"] }
 rapier2d = "0.11.1"
+wasm-bindgen = "0.2.78"
 
 [profile.dev.package.'*']
 opt-level = 3
